--- a/src/components/header/header.ejs
+++ b/src/components/header/header.ejs
@@ -2,14 +2,11 @@
 <html lang="zh-cmn-Hans">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
-  <meta name="renderer" content="webkit">
-  <link href="<%= BASE_URL %>favicon.ico" rel="icon" />
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1" />
+  <meta name="renderer" content="webkit" />
+  <title><%= title %></title>
 </head>
 
 <body>
