--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -1,3 +1,3 @@
-<%- require('@/components/header/header.ejs')({ htmlWebpackPlugin }) %>
-<div>你好，<%= htmlWebpackPlugin.options.title %></div>
-<%- require('@/components/footer/footer.ejs')() %>
+<%- include('../../components/header/header.ejs') %>
+<div>你好，<%= title %></div>
+<%- include('../../components/footer/footer.ejs') %>
